test/tests/stages/13_floating-point_numbers/valid/floating_expressions/loop_controlling_expression.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[40]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  for
  (
  double
  identifier(d)
  =
  const double(100.0)
  ;
  identifier(d)
  >
  const double(0.0)
  ;
  identifier(d)
  =
  identifier(d)
  -
  const double(1.0)
  )
  {
  identifier(a)
  =
  identifier(a)
  +
  const int(1)
  ;
  }
  return
  identifier(a)
  ;
  }
