test/tests/stages/13_floating-point_numbers/invalid_types/mod_double.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(main)
  (
  void
  )
  {
  double
  identifier(d)
  =
  const double(10.0)
  ;
  identifier(d)
  =
  identifier(d)
  %
  const int(3)
  ;
  return
  const int(0)
  ;
  }
